13-11-2019/Lab-1
Python Installation:

https://www.python.org/downloads/mac-osx/


Javeds-MacBook-Air:13-11-2019 javedalam$ python3.6
Python 3.6.3 |Anaconda, Inc.| (default, Oct  6 2017, 12:04:38) 
[GCC 4.2.1 Compatible Clang 4.0.1 (tags/RELEASE_401/final)] on darwin
Type "help", "copyright", "credits" or "license" for more information.
>>> 
>>> 
>>> print("Hello World!!")
Hello World!!
>>> 
>>> print('Hello World!!')
Hello World!!
>>> 
>>> print('''Hello World!!''')
Hello World!!
>>> 
>>> print("""Hello World!!""")
Hello World!!
>>> 
>>> print('It's a big challenge!!')
  File "<stdin>", line 1
    print('It's a big challenge!!')
              ^
SyntaxError: invalid syntax
>>> 
>>> print("It's a big challenge!!")
It's a big challenge!!
>>> 
>>> print("It's a big challenge!!....)
  File "<stdin>", line 1
    print("It's a big challenge!!....)
                                     ^
SyntaxError: EOL while scanning string literal
>>> 
>>> print("It's a big challenge for....
  File "<stdin>", line 1
    print("It's a big challenge for....
                                      ^
SyntaxError: EOL while scanning string literal
>>> 
>>> print('''It's a big challenge for....
... ....docs....
... ...let's a bit challenge for ....
... ... docs...
... ...Lastly..."Hello Worlds!!!"''')
It's a big challenge for....
....docs....
...let's a bit challenge for ....
... docs...
...Lastly..."Hello Worlds!!!"
>>> 

